@@ -98,6 +98,33 @@ environment:
       PYFULLVERSION: "3.8.5"
       PYDOCRUN: "true"
 
+    - APPVEYOR_BUILD_WORKER_IMAGE: macos-mojave
+      ARCH: "x64"
+      CONFIG: Release
+      PYVER: 39
+      PYLOC: "python"
+      PYSTACK: "3.9"
+      PYFULLVERSION: "3.9.0"
+      MACOS: "true"
+    
+    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+      ARCH: "x64"
+      CONFIG: Release
+      PYVER: 39
+      PYLOC: "python"
+      PYSTACK: "3.9"
+      PYFULLVERSION: "3.9.0"
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      GENERATOR: "Visual Studio 16 2019"
+      ARCH: "x64"
+      CONFIG: Release
+      PYVER: 39
+      PYLOC: "C:/Python39-x64/python.exe"
+      PYSTACK: "3.9"
+      PYFULLVERSION: "3.9.0"
+      PYDOCRUN: "true"
+
 matrix:
   fast_finish: true
 
