@@ -31,6 +31,7 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.x
 Updates:
 - ImGui:           	Upgraded to v1.79
 - ImGuiFileDialog: 	Upgraded to v0.5.1
+- Python:           Added python 3.9 support
 
 Fixes:
 - start_dearpygui:     	Is now protected from trying to create a new dearpygui instance before closing the last one issue#289
